# SummitEngine

./: CMakeLists.txt  LICENSE  ModuleBase.h.in  README.md  depth_pre_pass.vert  imgui.frag  imgui.vert  imgui_frag.spv  logging_config.json  main.cpp  quad.frag  quad.vert  vk_config.json
Application/: CMakeLists.txt  Chalet.h  Cube.h  SummitDemo.cpp  SummitDemo.h  tiny_obj_loader.h
Application/Windows/: CMakeLists.txt  main.cpp
Application/iOS/: CMakeLists.txt
Application/iOS/src/: AppDelegate.m  AppDelegate.mm  ViewController.mm  main.m
Application/macOS/: CMakeLists.txt
Application/macOS/include/: AppDelegate.h  SummitView.h  SummitWindow.h
Application/macOS/resources/: Info.plist  Main.storyboard
Application/macOS/src/: AppDelegate.m  AppDelegate.mm  SummitView.mm  SummitWindow.mm  ViewController.m  main.m
Builds/: iOS.sh  iOS_simulator.sh  macOS.sh
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Private/: SummitDispatcher.cpp
Engine/Core/Public/: CoreBase.h
Engine/Core/Public/Core/: Assert.h  FlagMask.h  Handle.h  Platform.h  Service.h  Templates.h  TupleHash.h
Engine/Core/Public/Dispatcher/: SummitDispatcher.h
Engine/Core/Public/Event/: Event.h  Signal.h
Engine/Engine/: CMakeLists.txt
Engine/Engine/Private/: EngineImpl.cpp  EngineImpl.h  Gui.cpp  Renderer.h  VulkanBuffer.h  VulkanRendererImpl.cpp  VulkanRendererImpl.h  VulkanSwapChainImpl.cpp  VulkanSwapChainImpl.h  Window.h  WindowEvent.h
Engine/Engine/Private/Windows/: Window.cpp
Engine/Engine/Private/iOS/: SummitView.h  SummitView.mm  Window.mm
Engine/Engine/Private/macOS/: SummitView.h  SummitView.mm  SummitWindow.h  SummitWindow.mm  ViewController.h  ViewController.m  Window.mm
Engine/Engine/Public/Engine/: Application.h  Engine.h  EngineBase.h  Gui.h  Renderer.h  SwapChain.h  VertexBuffer.h  Window.h  WindowEvent.h
Engine/Event/: CMakeLists.txt
Engine/Event/Private/: Event.cpp  EventServiceImpl.cpp  EventServiceImpl.h
Engine/Event/Public/Event/: Event.h  EventBase.h  EventHandler.h  EventService.h
Engine/Logging/: CMakeLists.txt
Engine/Logging/Private/Logging/: Appender.cpp  ConsoleWriter.cpp  ConsoleWriter.h  FileWriter.cpp  FileWriter.h  Logger.cpp  LoggingServiceImpl.cpp  LoggingServiceImpl.h  Severity.cpp  Tokens.h  Writer.cpp  Writer.h  pch.cpp  pch.h
Engine/Logging/Public/Logging/: Appender.h  ConsoleWriter.h  FileWriter.h  Logger.h  LoggingBase.h  LoggingService.h  Severity.h  Tokens.h  Writer.h
Engine/Math/: CMakeLists.txt
Engine/Math/Private/: Matrix4.cpp
Engine/Math/Public/Math/: Math.h  MathBase.h  Matrix4.h  Vector2.h  Vector3.h  Vector4.h
Engine/PAL/: CMakeLists.txt
Engine/PAL/FileSystem/: CMakeLists.txt
Engine/PAL/FileSystem/Private/: File.cpp  FileSystemServiceImpl.cpp  FileSystemServiceImpl.h
Engine/PAL/FileSystem/Private/Windows/: FileSystemServiceImpl.cpp  FileSystemTests.inl
Engine/PAL/FileSystem/Private/iOS/: FileSystemServiceImpl.cpp
Engine/PAL/FileSystem/Public/PAL/FileSystem/: File.h  FileSystemBase.h  FileSystemService.h  FileTypes.h
Engine/PAL/RenderAPI/: CMakeLists.txt
Engine/PAL/RenderAPI/Private/: RenderAPIFactory.cpp
Engine/PAL/RenderAPI/Private/Metal/: MetalAPIImpl.cpp  MetalAPIImpl.h
Engine/PAL/RenderAPI/Private/Vulkan/: VulkanAPIImpl.cpp  VulkanAPIImpl.h  VulkanDevice.cpp  VulkanImplAny.cpp  VulkanImplIOS.cpp  VulkanImplIOS.h  VulkanImplMacOS.cpp  VulkanImplMacOS.h  VulkanImplWin32.cpp  VulkanImplWin32.h  VulkanLoaderHelper.h  VulkanSwapChainImpl.cpp  VulkanSwapChainImpl.h
Engine/PAL/RenderAPI/Public/PAL/RenderAPI/: RenderAPIBase.h  RenderAPIService.h  SwapChain.h  VulkanAPI.h  VulkanDevice.h
Engine/PAL/RenderAPI/Public/PAL/RenderAPI/Vulkan/: VulkanAPI.h  VulkanDevice.h
Engine/Renderer/: CMakeLists.txt
Engine/Renderer/Private/: Camera.cpp  Command.cpp  Command.h  DeviceObjectImpl.cpp  Effect.cpp  Framebuffer.cpp  Image.cpp  RenderPass.cpp  SharedDeviceTypes.cpp  SwapChainBase.cpp  Texture.cpp  VertexBuffer.cpp  View.cpp
Engine/Renderer/Private/Vulkan/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommands.h  VulkanDeviceObjects.h  VulkanGuiRenderer.cpp  VulkanGuiRenderer.h  VulkanRendererImpl.cpp  VulkanRendererImpl.h  VulkanSwapChainImpl.cpp  VulkanSwapChainImpl.h  VulkanTypes.cpp  VulkanTypes.h
Engine/Renderer/Public/Renderer/: Camera.h  CommandBuffer.h  DeviceObject.h  Effect.h  Image.h  Input.h  Object3d.h  RenderPass.h  Renderer.h  SharedDeviceTypes.h  SwapChain.h  Transform.h  VertexBuffer.h  View.h
Engine/Renderer/Public/Renderer/Resources/: Buffer.h  DeviceResource.h  Framebuffer.h  Synchronization.h  Texture.h  Types.h
Engine/Tests/: CMakeLists.txt
Engine/Tests/Private/: main.cpp
Engine/Timer/: CMakeLists.txt
Engine/Timer/Private/: TimerServiceImpl.cpp  TimerServiceImpl.h
Engine/Timer/Public/Timer/: TimerBase.h  TimerService.h
